			ROX-Session
			A very simple session manager
			by Thomas Leonard

18-Mar-2001
~~~~~~~~~~~
When first loaded, ROX-Session will ask you which window manager you want
to use. If the window manager you run dies (or is quit), ROX-Session will
ask again.
Errors from child processes are copied to standard error, as well as being
displayed in the log window.

13-Mar-2001
~~~~~~~~~~~
'which' doesn't work on some systems. Try using 'twm' even if we think we
can't find it (Stephen Watson).

10-Mar-2001 (Release 0.1.11)
~~~~~~~~~~~
ROX-Session will now compile automatically the first time it is run.

09-Mar-2001
~~~~~~~~~~~
The default login script now runs everything it finds in
`Choices/ROX-Session/AutoStart'. Symlink your applications into here to
get them starting automatically!

Added an AppMenu with 'Auto start...' which creates and opens the user's
AutoStart directory.

13-Jan-2001
~~~~~~~~~~~
Bugfix: A extra copy of the error pipe was being passed to child processes,
	wasting one FD.

10-Jan-2001
~~~~~~~~~~~
Now traps standard error output and displays it overlayed on the
desktop.

01-Jan-2001
~~~~~~~~~~~
Improved the icon (slightly).

19-Dec-2000
~~~~~~~~~~~
Fixed a minor compiler warning (Bernard Jungen).

10-Nov-2000 (Release 0.1.10)
~~~~~~~~~~~
Fixed a bug which prevented ROX-Session from working under most systems:
waitpid() was called even though ROX-Session was ignoring child processes
(spotted by Stephen Watson).

07-Sep-2000
~~~~~~~~~~~
Fixed some bash-only problems (Bernard Jungen).