@@ -2,6 +2,11 @@
 			A very simple session manager
 			by Thomas Leonard
 
+23-Mar-2001
+~~~~~~~~~~~
+When the window manager quits, the choice box defaults to the last used
+command (so it's easy to restart the same program).
+
 18-Mar-2001
 ~~~~~~~~~~~
 When first loaded, ROX-Session will ask you which window manager you want
